--- a/src/landpage.html
+++ b/src/landpage.html
@@ -15,9 +15,11 @@
 <header>
     <div class="container-fluid p-0">
         <div class="row m-0 p-0 stats_bannier">
-            <img class="img-fluid" style="width: 100%" src="img/thecoon.jpg">
+            <img class="img-fluid" style="width: 100%" src="img/background.png">
         </div>
     </div>
+    <p class="text-center">YOU WANT TO FIGHT ?</p>
+    <a href="Form.php" type="button"><img src="img/coin.png" class="coin"></a>
 </header>
 <div class="container-fluid">
 
