--- a/src/landpage.html
+++ b/src/landpage.html
@@ -16,23 +16,36 @@
 <header>
     <div class="container-fluid p-0">
         <div class="row m-0 p-0 no-gutters banner">
-            <img class="img-fluid" src="img/background.png">
-        </div>
-    </div>
-    <div class="container">
+            <div class="col-md-12">
 
-        <div class="row no-gutters">
-            <div class="col-sm-12">
-                <p class="wantFight wantFightSize">YOU WANT TO FIGHT ?</p>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-4 mt-3">
+                            <h1 class="titleSize">THE COON GAME !</h1>
+                        </div>
+                    </div>
+                    <div class="row no-gutters">
+                        <div class="col-md-2 fondTitre">
+                            <div class="row no-gutters">
+                                <div class="col-sm-12">
+                                    <p class="wantFight wantFightSize">YOU WANT TO FIGHT ?</p>
+                                </div>
+                            </div>
+
+                            <div class="row m-0 p-0 no-gutters">
+                                <div class="col-sm-8 offset-sm-2 no-gutters wantFight">
+                                    <a class="btn btn-secondary btn-lg" href="http://localhost:8000/Form.php" role="button"><img src="img/coin.png" class="coin img-fluid"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
         </div>
-
-        <div class="row m-0 p-0 no-gutters">
-            <div class="col-sm-12 no-gutters wantFight">
-                <a class="btn btn-secondary btn-lg" href="http://localhost:8000/Form.php" role="button"><img src="img/coin.png" class="coin img-fluid"></a>
-            </div>
-        </div>
     </div>
+
 
 </header>
 <div class="container-fluid">
