--- a/src/landpage.html
+++ b/src/landpage.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
 
-    <title>The Coon</title>
+    <title>Super Heroes Fighters</title>
 </head>
 <body>
 <header>
@@ -20,8 +20,8 @@
 
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-4 mt-3">
-                            <h1 class="titleSize">THE COON GAME !</h1>
+                        <div class="col-md-10 offset-md-1 mt-3">
+                            <h1 class="titleSize">Super Heroes Fighters</h1>
                         </div>
                     </div>
                     <div class="row no-gutters">
@@ -34,7 +34,7 @@
 
                             <div class="row m-0 p-0 no-gutters">
                                 <div class="col-sm-8 offset-sm-2 no-gutters wantFight">
-                                    <a class="btn btn-secondary btn-lg" href="http://localhost:8000/Form.php" role="button"><img src="img/coin.png" class="coin img-fluid"></a>
+                                    <a href="Form.php"><img src="img/coin.png" class="coin"></a>
                                 </div>
                             </div>
                         </div>
